@@ -1,9 +1,15 @@
 package com.hollingsworth.arsnouveau.api.spell;
 
 import com.google.common.collect.ImmutableList;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonParser;
+import com.hollingsworth.arsnouveau.api.particle.timelines.TimelineMap;
 import com.hollingsworth.arsnouveau.api.sound.ConfiguredSpellSound;
 import com.hollingsworth.arsnouveau.client.particle.ParticleColor;
 import com.mojang.serialization.Codec;
+import com.mojang.serialization.JsonOps;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.Util;
@@ -11,13 +17,18 @@ import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.LivingEntity;
+import org.apache.commons.io.IOUtils;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nullable;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.StringWriter;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
+import java.util.zip.GZIPInputStream;
+import java.util.zip.GZIPOutputStream;
 
 public class Spell {
 
@@ -25,7 +36,8 @@ public class Spell {
             Codec.STRING.fieldOf("name").forGetter(s -> s.name),
             ParticleColor.CODEC.fieldOf("color").forGetter(s -> s.color),
             ConfiguredSpellSound.CODEC.fieldOf("sound").forGetter(s -> s.sound),
-            Codec.list(AbstractSpellPart.CODEC).fieldOf("recipe").forGetter(s -> s.recipe)
+            Codec.list(AbstractSpellPart.CODEC).fieldOf("recipe").forGetter(s -> s.recipe),
+            TimelineMap.CODEC.optionalFieldOf("particleTimeline").forGetter(s -> Optional.ofNullable(s.particleTimeline))
     ).apply(instance, Spell::new));
 
     public static final StreamCodec<RegistryFriendlyByteBuf, Spell> STREAM = StreamCodec.of(
@@ -34,13 +46,15 @@ public class Spell {
                 ParticleColor.STREAM.encode(buf, val.color);
                 ConfiguredSpellSound.STREAM.encode(buf, val.sound);
                 AbstractSpellPart.STREAM_LIST.encode(buf, val.recipe);
+                TimelineMap.STREAM.encode(buf, val.particleTimeline);
             },
             buf -> {
                 String name = buf.readUtf();
                 ParticleColor color = ParticleColor.STREAM.decode(buf);
                 ConfiguredSpellSound sound = ConfiguredSpellSound.STREAM.decode(buf);
                 List<AbstractSpellPart> recipe = AbstractSpellPart.STREAM_LIST.decode(buf);
-                return new Spell(name, color, sound, recipe);
+                TimelineMap particleTimeline = TimelineMap.STREAM.decode(buf);
+                return new Spell(name, color, sound, recipe, particleTimeline);
             }
     );
 
@@ -49,32 +63,104 @@ public class Spell {
     private final String name;
     private final ParticleColor color;
     private final ConfiguredSpellSound sound;
+    private final TimelineMap particleTimeline;
 
 
     public Spell() {
-        this("", ParticleColor.defaultParticleColor(), ConfiguredSpellSound.DEFAULT, ImmutableList.of());
+        this("", ParticleColor.defaultParticleColor(), ConfiguredSpellSound.DEFAULT, ImmutableList.of(), new TimelineMap());
     }
 
     public Spell(AbstractSpellPart... spellParts) {
         this(Arrays.asList(spellParts));
     }
 
-    public Spell(List<AbstractSpellPart> recipe) {
-        this("", ParticleColor.defaultParticleColor(), ConfiguredSpellSound.DEFAULT, recipe);
+    public Spell(List<AbstractSpellPart> recipe, String name) {
+        this(name, ParticleColor.defaultParticleColor(), ConfiguredSpellSound.DEFAULT, recipe);
     }
 
+    public Spell(List<AbstractSpellPart> recipe) {
+        this("", ParticleColor.defaultParticleColor(), ConfiguredSpellSound.DEFAULT, recipe, new TimelineMap());
+    }
+
+    @Deprecated(forRemoval = true)
     public Spell(String name, ParticleColor color, ConfiguredSpellSound configuredSpellSound, List<AbstractSpellPart> abstractSpellParts) {
+        this(name, color, configuredSpellSound, abstractSpellParts, new TimelineMap());
+    }
+
+    public Spell(String name, ParticleColor color, ConfiguredSpellSound configuredSpellSound, List<AbstractSpellPart> abstractSpellParts, TimelineMap particleTimeline) {
         this.name = name;
         this.color = color;
         this.sound = configuredSpellSound;
         this.recipe = ImmutableList.copyOf(abstractSpellParts);
+        this.particleTimeline = particleTimeline;
     }
 
-    public ConfiguredSpellSound sound(){
+    public Spell(String name, ParticleColor color, ConfiguredSpellSound configuredSpellSound, List<AbstractSpellPart> abstractSpellParts, Optional<TimelineMap> particleTimeline) {
+        this(name, color, configuredSpellSound, abstractSpellParts, particleTimeline.orElseGet(TimelineMap::new));
+    }
+
+
+    public static Spell fromJson(String jsonString) {
+
+        try {
+            System.out.println("About to read full spell from JSON: " + jsonString);
+            Spell spell = CODEC.codec().parse(JsonOps.INSTANCE, JsonParser.parseString(jsonString)).getOrThrow();
+            System.out.println("Full decoded spell: " + spell);
+            return spell;
+        } catch (Exception e) {
+            System.out.println("Failed to read spell from JSON: " + e.getMessage());
+        }
+
+        return new Spell();
+
+    }
+
+    public static Spell fromBinaryBase64(String base64) {
+
+
+        try {
+            byte[] bytes = Base64.getDecoder().decode(base64);
+            try (final GZIPInputStream gzipInput = new GZIPInputStream(new ByteArrayInputStream(bytes));
+                 final StringWriter stringWriter = new StringWriter()) {
+                IOUtils.copy(gzipInput, stringWriter, StandardCharsets.UTF_8);
+                return fromJson(stringWriter.toString());
+            } catch (IOException e) {
+                System.out.println("Error reading spell from binary: " + e.getMessage());
+            }
+        } catch (IllegalArgumentException e) {
+            System.out.println("Error decoding base64 string: " + e.getMessage());
+        } catch (Exception e) {
+            System.out.println("Error reading spell from binary: " + e.getMessage());
+        }
+        return new Spell();
+    }
+
+    public String toJson() {
+        JsonElement json = Spell.CODEC.codec().encodeStart(JsonOps.INSTANCE, this).getOrThrow();
+        Gson gson = new GsonBuilder().create();
+        return gson.toJson(json);
+    }
+
+    public String toBinaryBase64() {
+        String json = this.toJson();
+        try (final ByteArrayOutputStream baos = new ByteArrayOutputStream();
+             final GZIPOutputStream gzipOutput = new GZIPOutputStream(baos)) {
+            gzipOutput.write(json.getBytes(StandardCharsets.UTF_8));
+            gzipOutput.finish();
+            return new String(Base64.getEncoder().encode(baos.toByteArray()));
+        } catch (IOException e) {
+            System.out.println("Error writing spell to binary: " + e.getMessage());
+            return "";
+        }
+    }
+
+
+    @Deprecated(forRemoval = true)
+    public ConfiguredSpellSound sound() {
         return sound;
     }
 
-    public Iterable<AbstractSpellPart> recipe(){
+    public Iterable<AbstractSpellPart> recipe() {
         return recipe;
     }
 
@@ -82,24 +168,24 @@ public class Spell {
      * DO NOT MUTATE.
      * See {@link Spell#mutable()} for a mutable version.
      */
-    public List<AbstractSpellPart> unsafeList(){
+    public List<AbstractSpellPart> unsafeList() {
         return recipe;
     }
 
-    public AbstractSpellPart get(int index){
+    public AbstractSpellPart get(int index) {
         return recipe.get(index);
     }
 
-    public int size(){
+    public int size() {
         return recipe.size();
     }
 
-    public int indexOf(AbstractSpellPart part){
+    public int indexOf(AbstractSpellPart part) {
         return recipe.indexOf(part);
     }
 
     public Spell add(AbstractSpellPart spellPart) {
-        return new Spell(name, color, sound, Util.copyAndAdd(recipe, spellPart));
+        return new Spell(name, color, sound, Util.copyAndAdd(recipe, spellPart), particleTimeline);
     }
 
     public Spell add(AbstractSpellPart... spellParts) {
@@ -118,29 +204,43 @@ public class Spell {
     }
 
     public Spell setRecipe(@NotNull List<AbstractSpellPart> recipe) {
-        return new Spell(name, color, sound, ImmutableList.copyOf(recipe));
+        return new Spell(name, color, sound, ImmutableList.copyOf(recipe), particleTimeline);
     }
 
     public Spell withColor(@NotNull ParticleColor color) {
-        return new Spell(name, color, sound, recipe);
+        return new Spell(name, color, sound, recipe, particleTimeline);
     }
 
-    public Spell withSound(@NotNull ConfiguredSpellSound sound){
-        return new Spell(name, color, sound, recipe);
+    public Spell withSound(@NotNull ConfiguredSpellSound sound) {
+        return new Spell(name, color, sound, recipe, particleTimeline);
     }
 
-    public ParticleColor color(){
+    public Spell withTimeline(@NotNull TimelineMap timeline) {
+        return new Spell(name, color, sound, recipe, timeline);
+    }
+
+    public Spell withName(String name) {
+        return new Spell(name, color, sound, recipe, particleTimeline);
+    }
+
+    @Deprecated(forRemoval = true)
+    public ParticleColor color() {
         return color;
     }
 
-    public String name(){
+    public String name() {
         return name;
+    }
+
+
+    public TimelineMap particleTimeline() {
+        return particleTimeline;
     }
 
     public @Nullable AbstractCastMethod getCastMethod() {
         if (this.recipe == null || this.recipe.isEmpty())
             return null;
-        return this.recipe.get(0) instanceof AbstractCastMethod ? (AbstractCastMethod) recipe.get(0) : null;
+        return this.recipe.getFirst() instanceof AbstractCastMethod ? (AbstractCastMethod) recipe.getFirst() : null;
     }
 
     public List<AbstractAugment> getAugments(int startPosition, @Nullable LivingEntity caster) {
@@ -172,18 +272,18 @@ public class Spell {
         return (int) getAugments(startPosition, caster).stream().filter(a -> a.equals(augment)).count();
     }
 
-    public int getCost(){
+    public int getCost() {
         int cost = 0;
         AbstractSpellPart augmentedPart = null;
-        for(AbstractSpellPart part : recipe){
-            if(part == null)
+        for (AbstractSpellPart part : recipe) {
+            if (part == null)
                 continue;
-            if(!(part instanceof AbstractAugment))
+            if (!(part instanceof AbstractAugment))
                 augmentedPart = part;
 
-            if(augmentedPart != null && part instanceof AbstractAugment augment) {
+            if (augmentedPart != null && part instanceof AbstractAugment augment) {
                 cost += augment.getCostForPart(augmentedPart);
-            }else {
+            } else {
                 cost += part.getCastingCost();
             }
         }
@@ -223,18 +323,12 @@ public class Spell {
         return !this.isEmpty();
     }
 
-    public Spell add(AbstractSpellPart spellPart, int count, int index) {
-        for (int i = 0; i < count; i++)
-            recipe.add(index, spellPart);
-        return this;
-    }
-
-    public List<ResourceLocation> serializeRecipe(){
+    public List<ResourceLocation> serializeRecipe() {
         return this.recipe.stream().map(AbstractSpellPart::getRegistryName).toList();
     }
 
-    public Mutable mutable(){
-        return new Mutable(new ArrayList<>(recipe), name, color, sound);
+    public Mutable mutable() {
+        return new Mutable(new ArrayList<>(recipe), name, color, sound, particleTimeline);
     }
 
     @Override
@@ -242,25 +336,31 @@ public class Spell {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         Spell spell = (Spell) o;
-        return Objects.equals(recipe, spell.recipe) && Objects.equals(name, spell.name) && Objects.equals(color, spell.color) && Objects.equals(sound, spell.sound);
+        return Objects.equals(recipe, spell.recipe) && Objects.equals(name, spell.name) && Objects.equals(color, spell.color) && Objects.equals(sound, spell.sound) && Objects.equals(particleTimeline, spell.particleTimeline);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(recipe, name, color, sound);
+        return Objects.hash(recipe, name, color, sound, particleTimeline);
     }
 
-    public static class Mutable{
+    public static class Mutable {
         public List<AbstractSpellPart> recipe;
         public String name;
         public ParticleColor color;
         public ConfiguredSpellSound sound;
+        public TimelineMap particleTimeline;
 
-        public Mutable(List<AbstractSpellPart> recipe, String name, ParticleColor color, ConfiguredSpellSound spellSound) {
+        public Mutable(List<AbstractSpellPart> recipe, String name, ParticleColor color, ConfiguredSpellSound spellSound, TimelineMap timeline) {
             this.recipe = recipe;
             this.name = name;
             this.color = color;
             this.sound = spellSound;
+            this.particleTimeline = timeline;
+        }
+
+        public Mutable(List<AbstractSpellPart> recipe, String name, ParticleColor color, ConfiguredSpellSound spellSound) {
+            this(recipe, name, color, spellSound, new TimelineMap());
         }
 
         public Mutable add(AbstractSpellPart spellPart) {
@@ -283,8 +383,9 @@ public class Spell {
             return this;
         }
 
-        public Spell immutable(){
-            return new Spell(name, color, sound, recipe);
+
+        public Spell immutable() {
+            return new Spell(name, color, sound, recipe, particleTimeline);
         }
     }
 }
